small fixes to code, removes unecessary parts and fixes layout shift

--- a/main.css
+++ b/main.css
@@ -66,21 +66,6 @@ thead tr:nth-child(1) th {
 /* New css added from template */
 
 
-<style>
-  .bd-placeholder-img {
-    font-size: 1.125rem;
-    text-anchor: middle;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-  }
-
-  @media (min-width: 768px) {
-    .bd-placeholder-img-lg {
-      font-size: 3.5rem;
-    }
-  }
 
 a,
 a:focus,
@@ -105,6 +90,8 @@ a:hover {
 
 html {
   height: 100%;
+  overflow-y: scroll;
+}
 }
 
 body {
